# Strictify

./: README.md
Example/: The Art of War.md
Example/src/: Book.yaml  card.js
Strictify/: CMakeLists.txt  README.md
Strictify/src/: card_validator.cpp  card_validator.h  content_validator.cpp  content_validator.h  frontmatter_validator.cpp  frontmatter_validator.h  main.cpp  models.h  parsers.cpp  parsers.h  utils.cpp  utils.h
